--- a/2.manual connect/package.json
+++ b/2.manual connect/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "grunt": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-contrib-connect": "*",
+    "typescript": "~1.3.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-typescript": "~0.4.4"
   },
   "dependencies": {
-    "typescript": "~1.3.0"
+
   }
 }
